--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     }
     .index-img{
      height: 400px;       
-    object-fit: cover; 
-    object-position: top;  
+     object-fit:cover;
+    object-position: bottom;  
     width: 100%;      
     }
   </style>
@@ -26,9 +26,9 @@
     <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
       <img src="images/—Pngtree—faster logo template sunlight aviation_11020769.eps " alt="Logo" width="30" height="30" class="d-inline-block align-text-top img-fluid">
-      <a class="navbar-brand" href="#">IN-conUnsult</a>
+      <a class="navbar-brand" href="index.html">IN-conUnsult</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -96,7 +96,7 @@
       </div>
     </div>
   </div>
-
+  
   <!-- Table and Accordion -->
   <section class="mt-5">
     <div class="container">
